--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ li {
   background-color: white;
   border-color: rgba(96, 112, 255, 1);
   border-radius: 8px;
-  color: (57,109,242);
+  color: (57, 109, 242);
   text-align: center;
   font-family: 'Poppins', sans-serif;
   font-size: 17px;
