--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@
 
 .work-section {
   display: grid;
-  grid-template-rows: repeat(4,610px);
+  grid-template-rows:repeat(4, 610px);
   gap: 88px;
   padding-top: 144px;
   padding-bottom: 144px;
