--- a/style.css
+++ b/style.css
@@ -7,8 +7,10 @@
 
 .container {
   display: flex;
-  padding: 4px 24px 4px 12px;
+  background-color: white;
   justify-content: space-between;
+  width: 100%;
+  height: auto;
 }
 
 .logo {
@@ -16,16 +18,23 @@
   font-size: 18px;
   font-weight: 700;
   color: rgba(96, 112, 255, 1);
+  margin-left: 20px;
 }
 
+.menu{
+  margin-right: 20px;
+}
 .headline {
   display: flex;
   padding: 114px 24px;
   flex-direction: column;
   gap: 12px;
+  background-size: cover;
   background-image: url(./icons/header.png);
   background-repeat: no-repeat;
   width: 87%;
+  background-color: white;
+  border-bottom-left-radius: 80px;
 }
 
 .primary-text {
@@ -53,6 +62,10 @@
   height: 20px;
 }
 
+body{
+  background: rgb(247, 247, 247);
+}
+
 .lets-connect {
   font-family: 'Poppins', sans-serif;
   font-size: 16px;
@@ -62,10 +75,11 @@
 
 .work-section {
   display: grid;
-  grid-template-rows: repeat(4, 610px);
+  grid-template-rows: repeat(4, auto);
+  width:100%;
+  height: auto;
   gap: 88px;
   padding-top: 144px;
-  background: rgb(247, 247, 247);
 }
 
 .card {
@@ -73,11 +87,13 @@
   display: flex;
   flex-direction: column;
   gap: 12px;
+  height: auto;
+  width: auto;
   padding: 16px;
   border: 1px solid rgba(223, 225, 230);
   border-radius: 16px;
-  margin-left: 15px;
-  margin-right: 15px;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 .project-title {
@@ -204,14 +220,14 @@ li {
 .about-description {
   font-family: 'Poppins', sans-serif;
   color: rgba(52, 69, 99, 1);
-  width: 327px;
-  height: 147px;
+  width: 95%;
+  height: auto;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
   margin-left: 10px;
-  margin-top: 0;
+  margin-top: 2%;
 }
 
 .resume {
@@ -224,7 +240,8 @@ li {
   padding: 12px;
   gap: 10px;
   border-radius: 8px;
-  width: 45%;
+  height: 50px;
+  width: 159px;
   font-size: 15px;
   letter-spacing: 1px;
   font-style: normal;
@@ -321,6 +338,8 @@ li {
   grid-template-columns: 94%;
   align-items: center;
   gap: 88px;
+  height: auto;
+  width: auto;
   border-top-left-radius: 100px;
   background: var(--primary-b-400, #6070ff);
 }
@@ -343,7 +362,6 @@ li {
 }
 
 .ContactMeDetails {
-  width: 327px;
   text-align: center;
   font-family: 'Poppins', sans-serif;
   font-size: 20px;
@@ -352,8 +370,10 @@ li {
 }
 
 .email {
-  width: 320px;
-  height: 30px;
+  width: 98%;
+  height: 50px;
+  padding-left: 5%;
+  border: transparent;
   flex-shrink: 0;
   border-radius: 8px;
   align-self: center;
@@ -365,9 +385,21 @@ li {
   align-items: center;
 }
 
+input::placeholder{
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+}
+
+textarea::placeholder{
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-size: 15px;
+}
+
 .message {
-  width: 314px;
-  height: 170px;
+  width: 98%;
+  height: 150px;
+  border: transparent;
   flex-shrink: 0;
   align-self: center;
   margin-bottom: 20px;
