--- a/style.css
+++ b/style.css
@@ -27,7 +27,11 @@
 
 .headline {
   display: flex;
-  padding: 114px 24px;
+  /* padding: 114px 24px; */
+  padding-top: 114px;
+  padding-bottom: 114px;
+  padding-left: 6.5%;
+  padding-right: 6.5%;
   flex-direction: column;
   gap: 12px;
   background-size: cover;
